--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
+.vs/
 /dist
 /dist-server
 /tmp
@@ -10,6 +11,7 @@ bin/
 obj/
 assets/
 packages/
+*.log
 *.zip
 
 # dependencies
