--- a/CreativeHandsCoreApi/appsettings.Development.json
+++ b/CreativeHandsCoreApi/appsettings.Development.json
@@ -1,8 +1,24 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+    "SmsSettings": {
+        "baseUrl": "xx",
+        "token": "xx",
+        "sellerTel": "xx",
+        "siteTel": "xx",
+        "maxSmsLength": 0
+    },
+    "FtpSettings": {
+        "UploadUrl": "ftp://xxx.xx.xx.xx/",
+        "UserName": "xxxx",
+        "Password": "xxxxx"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "MarketDBConnectionString": "Server=194.36.89.39; Database=Market; User Id=rami; Password=marJan2020; TrustServerCertificate=True;MultipleActiveResultSets=True"
+    },
+    "AllowedHosts": "*"
 }
