update connection string

--- a/CreativeHandsCoreApi/appsettings.Development.json
+++ b/CreativeHandsCoreApi/appsettings.Development.json
@@ -18,7 +18,7 @@
         }
     },
     "ConnectionStrings": {
-        "MarketDBConnectionString": "Server=194.36.89.39; Database=Market; User Id=rami; Password=marJan2020; TrustServerCertificate=True;MultipleActiveResultSets=True"
+        "MarketDBConnectionString": "Server=xxx.xx.xx.x; Database=xxxx; User Id=xx; Password=xxxx; TrustServerCertificate=True;MultipleActiveResultSets=True"
     },
     "AllowedHosts": "*"
 }
