--- a/AngularClientApp/package.json
+++ b/AngularClientApp/package.json
@@ -5,25 +5,22 @@
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
-    "build:ssr": "ng build && ng run CreativeHands:server",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "dev:ssr": "ng run CreativeHands:serve-ssr",
-    "serve:ssr": "node dist-server/main.js",
-    "prerender": "ng run CreativeHands:prerender"
+    "serve:ssr:CreativeHands": "node dist/server/server.mjs"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.12",
-    "@angular/common": "^17.3.12",
-    "@angular/compiler": "^17.3.12",
-    "@angular/core": "^17.3.12",
-    "@angular/forms": "^17.3.12",
-    "@angular/platform-browser": "^17.3.12",
-    "@angular/platform-browser-dynamic": "^17.3.12",
-    "@angular/router": "^17.3.12",
-    "@angular/ssr": "^17.3.8",
+    "@angular/animations": "^18.1.4",
+    "@angular/common": "^18.1.4",
+    "@angular/compiler": "^18.1.4",
+    "@angular/core": "^18.1.4",
+    "@angular/forms": "^18.1.4",
+    "@angular/platform-browser": "^18.1.4",
+    "@angular/platform-browser-dynamic": "^18.1.4",
+    "@angular/router": "^18.1.4",
+    "@angular/ssr": "^18.1.4",
     "@popperjs/core": "^2.11.8",
     "angular-font-awesome": "^3.1.2",
     "aspnet-prerendering": "^3.0.1",
@@ -39,10 +36,10 @@
     "zone.js": "^0.14.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1002.1",
-    "@angular/cli": "^17.3.8",
-    "@angular/compiler-cli": "^17.3.12",
-    "@angular/language-service": "^17.3.12",
+    "@angular-devkit/build-angular": "^18.1.4",
+    "@angular/cli": "^18.1.4",
+    "@angular/compiler-cli": "^18.1.4",
+    "@angular/language-service": "^18.1.4",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~4.3.0",
     "@types/jasminewd2": "~2.0.10",
