--- a/AngularClientApp/package.json
+++ b/AngularClientApp/package.json
@@ -4,11 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
-    "build": "ng build",
+    "build": "ng build && ng run CreativeHands:server",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "serve:ssr:CreativeHands": "node dist/server/server.mjs"
+    "build:ssr": "ng build && ng run CreativeHands:server",
+    "serve:ssr": "node dist/server/main.js"
   },
   "private": true,
   "dependencies": {
@@ -19,25 +20,36 @@
     "@angular/forms": "^18.1.4",
     "@angular/platform-browser": "^18.1.4",
     "@angular/platform-browser-dynamic": "^18.1.4",
+    "@angular/platform-server": "^18.1.4",
     "@angular/router": "^18.1.4",
     "@angular/ssr": "^18.1.4",
+    "@nguniversal/express-engine": "^7.0.2",
     "@popperjs/core": "^2.11.8",
     "angular-font-awesome": "^3.1.2",
     "aspnet-prerendering": "^3.0.1",
+    "axios": "^1.7.3",
     "bootstrap": "^5.2.0",
     "core-js": "^3.3.3",
+    "domain-task": "^3.0.3",
     "express": "^4.18.2",
     "font-awesome": "^4.7.0",
+    "isomorphic-fetch": "^3.0.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "ngx-color-picker": "^17.0.0",
+    "node-fetch": "^3.3.2",
     "oidc-client": "^1.9.1",
     "rxjs": "^7.8.0",
     "zone.js": "^0.14.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.1.4",
-    "@angular/cli": "^18.1.4",
+    "@angular-eslint/builder": "^16.3.1",
+    "@angular-eslint/eslint-plugin": "18.2.0",
+    "@angular-eslint/eslint-plugin-template": "18.2.0",
+    "@angular-eslint/schematics": "^16.3.1",
+    "@angular-eslint/template-parser": "18.2.0",
+    "@angular/cli": "^16.2.14",
     "@angular/compiler-cli": "^18.1.4",
     "@angular/language-service": "^18.1.4",
     "@types/express": "^4.17.17",
@@ -45,8 +57,14 @@
     "@types/jasminewd2": "~2.0.10",
     "@types/lodash": "^4.17.7",
     "@types/node": "~18.16.0",
+    "@typescript-eslint/eslint-plugin": "7.11.0",
+    "@typescript-eslint/parser": "7.11.0",
     "browser-sync": "^3.0.0",
-    "codelyzer": "^0.0.28",
+    "eslint": "8.57.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "jasmine-core": "~4.4.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "^6.4.0",
@@ -58,7 +76,10 @@
   },
   "optionalDependencies": {
     "node-sass": "^9.0.0",
-    "ts-node": "~10.9.1",
-    "tslint": "~6.1.3"
+    "ts-node": "~10.9.1"
+  },
+  "resolutions": {
+    "axios": "1.7.3",
+    "node-fetch": "3.3.2"
   }
 }
