--- a/CreativeHandsCoreApi/appsettings.Development.json
+++ b/CreativeHandsCoreApi/appsettings.Development.json
@@ -1,15 +1,16 @@
+ 
 {
     "SmsSettings": {
-        "baseUrl": "http://www.micropay.co.il/ExtApi/ScheduleSms.php?get=1",
-        "token": "1s9Ice98882de129abbe377cc6e80c8c6790",
-        "sellerTel": "0503332942",
-        "siteTel": "0503332942",
-        "maxSmsLength": 133
+        "baseUrl": "xx",
+        "token": "xx",
+        "sellerTel": "xx",
+        "siteTel": "xx",
+        "maxSmsLength": 0
     },
     "FtpSettings": {
-        "UploadUrl": "ftp://194.36.89.39/",
-        "UserName": "FtpUser",
-        "Password": "creativeHands2024!"
+        "UploadUrl": "ftp://xxx.xx.xx.xx/",
+        "UserName": "xxxx",
+        "Password": "xxxxx"
     },
     "Logging": {
         "LogLevel": {
@@ -18,39 +19,10 @@
         }
     },
     "ConnectionStrings": {
-        "MarketDBConnectionString": "Server=194.36.89.39; Database=Market; User Id=rami; Password=marJan2020; TrustServerCertificate=True;MultipleActiveResultSets=True"
+        "MarketDBConnectionString": "Server=xxx.xx.xx.x; Database=xxxx; User Id=xx; Password=xxxx; TrustServerCertificate=True;MultipleActiveResultSets=True"
     },
-    "CacheSettings": {
-        "AllProductsCacheHours": 12
-    },
+"CacheSettings": {
+    "AllProductsCacheHours": 12
+},
     "AllowedHosts": "*"
 }
-
-
-//{
-//    "SmsSettings": {
-//        "baseUrl": "xx",
-//        "token": "xx",
-//        "sellerTel": "xx",
-//        "siteTel": "xx",
-//        "maxSmsLength": 0
-//    },
-//    "FtpSettings": {
-//        "UploadUrl": "ftp://xxx.xx.xx.xx/",
-//        "UserName": "xxxx",
-//        "Password": "xxxxx"
-//    },
-//    "Logging": {
-//        "LogLevel": {
-//            "Default": "Information",
-//            "Microsoft.AspNetCore": "Warning"
-//        }
-//    },
-//    "ConnectionStrings": {
-//        "MarketDBConnectionString": "Server=xxx.xx.xx.x; Database=xxxx; User Id=xx; Password=xxxx; TrustServerCertificate=True;MultipleActiveResultSets=True"
-//    },
-//"CacheSettings": {
-//    "AllProductsCacheHours": 12
-//},
-//    "AllowedHosts": "*"
-//}
